--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,7 +3,8 @@ spring.social.mvc.normal.title=Spring Social Sign In Example
 #Navigation
 label.navigation.home.link=Home
 label.navigation.logout.link=Logout
-label.navigation.registration.link=Create user account
+label.navigation.registration.link=Sign up
+label.navigation.login.link=Login
 label.navigation.signed.in.as.text=Signed in as
 label.navigation.toggle.navigation.button=Toggle navigation
 #Homepage
@@ -15,17 +16,19 @@ label.user.login.page.title=Login
 label.user.login.submit.button=Login
 text.login.page.authenticated.user.help=You cannot login because you are already logged in.
 text.login.page.login.failed.error=Login failed!
-
+text.login.page.openidlogin.failed.error=Failed login with openId!
 label.login.form.title=Login by using your user account
-label.social.sign.in.title=Sign in by using social provider
+label.user.emailAddress=Email Address
+label.user.forgotPassword=Forgot password?
+label.user.rememberMe=Remember Me
 
-label.facebook.sign.in.button=Sign in with Facebook
-label.twitter.sign.in.button=Sign in with Twitter
 
 #Registration Page
 label.user.registration.page.title=Register User Account
 label.user.registration.submit.button=Register
 text.registration.page.authenticated.user.help=You cannot create an user account because you are already logged in.
+label.user.confirmPassword=Confirm Password
+label.user.formattedName=Formatted Name
 
 #User
 label.user.email=Email
@@ -34,8 +37,11 @@ label.user.lastName=Last name
 label.user.password=Password
 label.user.passwordVerification=Password verification
 
+text.login.page.resetPass.invalidtoken=Password reset link is not valid anymore. Please try again.
+
+label.user.resetPass.button=Update password 
 Email.user.email=Email address must be a valid email address.
-NotExist.user.email=User account with this email address is already registered.
+NotExist.user.email=User account with this email address is already registered. Try to login or reset your password.
 NotEmpty.user.email=Email cannot be empty.
 NotEmpty.user.firstName=First name cannot be empty.
 NotEmpty.user.lastName=Last name cannot be empty.
@@ -52,8 +58,8 @@ Size.user.lastName=The maximum length of last name is {1} characters.
 
 
 #Oppfin Facets
-oppfin.facet.TO.label=Technical Offers
-oppfin.facet.BO.label=Business Offers
-oppfin.facet.TR.label=Technical Requests
-oppfin.facet.BR.label=Business Requests
-
+oppfin.field.TO.label=Technology Offer
+oppfin.field.BO.label=Business Offer
+oppfin.field.BR.label=Business Request
+oppfin.field.TR.label=Technology Request
+oppfin.field.RDR.label=Partner Search
